Bug 223201 - "Recent Notifications" applications' tabbar maximum width is not honored during several situations (causing the Notification extender to be too wide)
Summary: "Recent Notifications" applications' tabbar maximum width is not honored duri...
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: notifications (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 224187 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-01-17 20:55 UTC by Antonio Rojas
Modified: 2010-01-27 13:26 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (83.95 KB, image/png)
2010-01-17 20:56 UTC, Antonio Rojas
Details
screenshot (48.86 KB, image/png)
2010-01-19 19:04 UTC, Antonio Rojas
Details
Proposed patch (661 bytes, patch)
2010-01-20 16:56 UTC, Dario Andres
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2010-01-17 20:55:38 UTC
Version:            (using Devel)
OS:                Linux
Installed from:    Compiled sources

When there are recent notifications from a few apps, the plasma notifications become too wide. Right now they're taking more than half of the width of my 15' screen. The label text of the apps should be ellided if they are too long.
Comment 1 Antonio Rojas 2010-01-17 20:56:53 UTC
Created attachment 39988 [details]
screenshot
Comment 2 Dario Andres 2010-01-19 18:52:58 UTC
The tabbar containing the applications' names has a maximum width of 400px...
May be a smaller size should be applied ?
@Marco: what do you think ?
Regards
Comment 3 Antonio Rojas 2010-01-19 19:04:15 UTC
Created attachment 40046 [details]
screenshot

It's definitely wider than 400px here...
Comment 4 Dario Andres 2010-01-19 19:08:06 UTC
May be the value is not being honored....
Comment 5 Dario Andres 2010-01-20 16:50:30 UTC
I did some tests about it on 4.5 trunk:

Test 1:
---

I spawned several notifications (using dbus) (with different appnames) with a delay of 1s between them
After the first notification is shown, if I click the "Recent Notifications" "expand" button (to show the application TabBar); all the other applications appear properly, the maxwidth is honored and the "<>" arrows appear in the tabbar...

However, if I click one item in the Tabbar,  the tabbar is "expanded" (the maxwidth is not honored and the "<>" arrows dissapear)

Test 2:
---

If I spawn all the notifications at the same time (without delay), the tabbar maxwidth won't be honored from the start...

--

I can attach the sample code I used to spawn the notifications if needed...
Comment 6 Dario Andres 2010-01-20 16:56:40 UTC
Created attachment 40075 [details]
Proposed patch
Comment 7 Dario Andres 2010-01-26 16:05:42 UTC
*** Bug 224187 has been marked as a duplicate of this bug. ***
Comment 8 Dario Andres 2010-01-27 13:24:32 UTC
SVN commit 1081011 by darioandres:

- Fix the maximum width of the the application tabbar in the notification dialog in order to avoid a 
  too wide dialog

BUG:223201


 M  +1 -1      applet.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1081011
Comment 9 Dario Andres 2010-01-27 13:26:23 UTC
SVN commit 1081012 by darioandres:

Backport to 4.4 of:
SVN commit 1081011 by darioandres:

- Fix the maximum width of the the application tabbar in the notification
dialog in order to avoid a 
  too wide dialog

CCBUG:223201


 M  +1 -1      applet.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1081012