- Fix the maximum width of the the application tabbar in the notification dialog in order to avoid a   too wide dialog

BUG:223201

svn path=/trunk/KDE/kdebase/workspace/; revision=1081011